--- a/esp_bib.bib
+++ b/esp_bib.bib
@@ -897,3 +897,25 @@ URL = {https://www.aeaweb.org/articles?id=10.1257/pol.20190299}}
   pages={22--il},
   year={2019}
 }
+
+@article{saez2012earnings,
+  title={Earnings determination and taxes: Evidence from a cohort-based payroll tax reform in Greece},
+  author={Saez, Emmanuel and Matsaganis, Manos and Tsakloglou, Panos},
+  journal={The Quarterly Journal of Economics},
+  volume={127},
+  number={1},
+  pages={493--533},
+  year={2012},
+  publisher={MIT Press}
+}
+
+@article{weyl2013pass,
+  title={Pass-through as an economic tool: Principles of incidence under imperfect competition},
+  author={Weyl, E Glen and Fabinger, Michal},
+  journal={Journal of Political Economy},
+  volume={121},
+  number={3},
+  pages={528--583},
+  year={2013},
+  publisher={University of Chicago Press Chicago, IL}
+}
